# QuickTcp

./: CMakeLists.txt  README.md
cmakeModules/: DllInstaller.cmake  FindAsyncCpp.cmake  FindGTestSrc.cmake  FindWinsock2.cmake  Findasync.cpp.cmake  Findlibuv.cmake  LibraryFinder.cmake  UseGtest.cmake
server/: CMakeLists.txt  Platform.h  Server.cpp  Server.h
server/interface/: CMakeLists.txt  ICallback.h  IServer.cpp  IServer.h  IServerConnection.cpp  Platform.h  ReceiveTask.cpp  ReceiveTask.h  SendTask.cpp  SendTask.h
server/posix/: Server.cpp
server/windows/: Overlap.cpp  Platform.h  Server.cpp  Server.h  ServerConnection.cpp  ServerConnection.h  Socket.cpp  Socket.h
src/: CMakeLists.txt
src/async/: Parallel.cpp  ParallelForEach.cpp  Series.cpp
src/async/test/: TestAsync.cpp
src/client/: CMakeLists.txt  IClient.cpp  IClient.h  IProcessor.cpp  IProcessor.h  Platform.h  ServerInfo.cpp
src/client/test/: CMakeLists.txt  TestClient.cpp
src/os/posix/client/: CMakeLists.txt
src/os/posix/server/: CMakeLists.txt
src/os/windows/client/: CMakeLists.txt  Client.cpp  Client.h  IEventHandler.cpp  IEventHandler.h  IOverlap.cpp  IOverlap.h  Overlap.h  Platform.h  ReceiveOverlap.cpp  ReceiveOverlap.h  SendOverlap.cpp  SendOverlap.h  Socket.cpp  Socket.h
src/os/windows/client/test/: CMakeLists.txt  TestClient.cpp
src/os/windows/server/: CMakeLists.txt  ConnectCompleter.h  ConnectOverlap.cpp  ConnectOverlap.h  ICompleter.cpp  IEventHandler.cpp  IEventHandler.h  IOverlap.cpp  IOverlap.h  Overlap.cpp  Overlap.h  ReceiveCompleter.cpp  ReceiveCompleter.h  ReceiveOverlap.cpp  ReceiveOverlap.h  ResponseCompleter.cpp  ResponseCompleter.h  ResponseOverlap.cpp  ResponseOverlap.h  SendCompleter.cpp  SendCompleter.h  SendOverlap.cpp  SendOverlap.h  Server.cpp  Server.h  ServerConnection.cpp  ServerConnection.h  Socket.cpp  Socket.h
src/os/windows/server/test/: CMakeLists.txt  TestServer.cpp
src/quicktcp/: CMakeLists.txt  Platform.h  QuickTcp.cpp  QuickTcp.h
src/quicktcp/client/: CMakeLists.txt  Client.cpp  Client.h  IAuthenticator.cpp  IAuthenticator.h  IClient.h  IProcessor.cpp  IProcessor.h  PendingRequest.cpp  PendingRequest.h  Platform.h  ServerInfo.cpp  ServerInfo.h
src/quicktcp/client/test/: CMakeLists.txt  TestClient.cpp
src/quicktcp/os/: CMakeLists.txt
src/quicktcp/os/posix/client/test/: CMakeLists.txt
src/quicktcp/os/posix/server/test/: CMakeLists.txt
src/quicktcp/os/windows/client/: CMakeLists.txt  Client.cpp  Client.h  IEventHandler.cpp  IEventHandler.h  IOverlap.cpp  IOverlap.h  Platform.h  ReceiveOverlap.cpp  ReceiveOverlap.h  SendOverlap.cpp  SendOverlap.h  Socket.cpp  Socket.h  Winsock2.h
src/quicktcp/os/windows/client/test/: TestClient.cpp
src/quicktcp/os/windows/server/: CMakeLists.txt  ConnectCompleter.cpp  ConnectCompleter.h  ConnectOverlap.cpp  ConnectOverlap.h  ICompleter.cpp  ICompleter.h  IEventHandler.cpp  IEventHandler.h  IOverlap.cpp  IOverlap.h  Overlap.cpp  Overlap.h  Platform.h  ReceiveCompleter.cpp  ReceiveCompleter.h  ReceiveOverlap.cpp  ReceiveOverlap.h  ResponseCompleter.cpp  ResponseCompleter.h  ResponseOverlap.cpp  ResponseOverlap.h  SendCompleter.cpp  SendCompleter.h  SendOverlap.cpp  SendOverlap.h  Server.cpp  Server.h  Socket.cpp  Socket.h
src/quicktcp/os/windows/server/test/: CMakeLists.txt  TestServer.cpp
src/quicktcp/server/: CMakeLists.txt  IResponder.cpp  IResponder.h  IServer.h  Server.cpp  Server.h  ServerInfo.cpp  ServerInfo.h
src/quicktcp/server/test/: CMakeLists.txt  TestServer.cpp
src/quicktcp/test/: CMakeLists.txt  TestQuickTcp.cpp
src/quicktcp/utilities/: BinarySerializer.cpp  BinarySerializer.h  ByteStream.cpp  ByteStream.h  CMakeLists.txt  ISerializable.cpp  ISerializable.h  Platform.h  Serializable.cpp  Serializable.h
src/quicktcp/utilities/test/: CMakeLists.txt  TestBinarySerializer.cpp  TestByteStream.cpp  TestRunner.cpp  TestUtilities.cpp
src/server/: CMakeLists.txt  IResponder.cpp  IResponder.h  IServer.cpp  IServer.h  IServerConnection.cpp  IServerConnection.h  Platform.h  ServerInfo.cpp  ServerInfo.h
src/server/test/: CMakeLists.txt  TestServer.cpp
src/utilities/: BinarySerializer.cpp  BinarySerializer.h  ByteStream.cpp  ByteStream.h  CMakeLists.txt  ISerializable.cpp  Platform.h  RequestToResponse.h  Serializable.cpp  Serializable.h
src/utilities/test/: TestUtilities.cpp
src/workers/: BasicTask.cpp  BasicTask.h  Manager.cpp  Manager.h  Task.cpp  Task.h  Worker.cpp  Worker.h
src/workers/test/: TestWorkers.cpp
test/src/: CMakeLists.txt
test/src/client/: CMakeLists.txt
test/src/server/: CMakeLists.txt
test/src/utilities/: CMakeLists.txt  TestBinarySerializable.cpp  TestByteStream.cpp  TestRequestToResponse.cpp  TestRunner.cpp
test/src/workers/: CMakeLists.txt  TestRunner.cpp  TestWorkers.cpp
utilities/: BinarySerializable.cpp  BinarySerializable.h  ByteStream.cpp  ByteStream.h  CMakeLists.txt  Platform.h
workers/: CMakeLists.txt  Platform.h  Task.cpp  Task.h  Worker.cpp  Worker.h  WorkerPool.cpp  WorkerPool.h
