set (TARGET WindowsServer)

file(GLOB HEADERS "*.h")

file(GLOB SOURCES "*.cpp")

set(async.cpp_VERSION 0.5.0)
find_package(async.cpp REQUIRED)
find_package(Winsock2)
SET (DEPENDENCIES Server Utilities ${WINSOCK2_LIBRARIES} ${ASYNC.CPP_LIBRARIES})

add_library (${TARGET} ${LIBRARY_BUILD_TYPE} ${HEADERS} ${SOURCES}) 
target_link_libraries (${TARGET} ${DEPENDENCIES})

set_target_properties (${TARGET} PROPERTIES
    SOVERSION ${PROJECT_SO_VERSION})

if(NOT MSVC)
	install (TARGETS ${TARGET} 
		RUNTIME DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} 
		LIBRARY DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} 
		ARCHIVE DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
else()
	foreach(config ${CMAKE_CONFIGURATION_TYPES})
		install (TARGETS ${TARGET} 
			RUNTIME DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${config} 
			LIBRARY DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${config} 
			ARCHIVE DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${config})
	endforeach()
endif()

SetVSTargetProperties(${TARGET})

if(BUILD_TESTS)
	set(HEADERS)
	set(SOURCES)
	set(DEPENDENCIES)
	set(TARGET)
	add_subdirectory(test)
endif()